{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 60,
  "lineage": "6938fcc5-535f-79b4-c4e8-b26d1f97f45d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T21:09:27.684-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/poised-diagram-446213-g8/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
            "priority": 1000,
            "project": "poised-diagram-446213-g8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T21:09:28.653-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/poised-diagram-446213-g8/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
            "priority": 1000,
            "project": "poised-diagram-446213-g8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7860"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T21:09:27.724-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/poised-diagram-446213-g8/global/firewalls/allow-gradio",
            "log_config": [],
            "name": "allow-gradio",
            "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
            "priority": 1000,
            "project": "poised-diagram-446213-g8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/firewalls/allow-gradio",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gradio"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T21:09:27.755-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/poised-diagram-446213-g8/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
            "priority": 1000,
            "project": "poised-diagram-446213-g8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250312",
                    "provisioned_iops": 3090,
                    "provisioned_throughput": 162,
                    "size": 15,
                    "type": "hyperdisk-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/zones/us-central1-a/disks/chatbot"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Emerald Rapids",
            "creation_timestamp": "2025-03-28T21:24:32.396-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/poised-diagram-446213-g8/zones/us-central1-a/instances/chatbot",
            "instance_id": "5936400634525436143",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "c4-highmem-4",
            "metadata_fingerprint": "48OMPOAFu5M=",
            "metadata_startup_script": "#!/bin/bash \nsudo apt-get update -y \nsudo apt-get install -y docker.io docker-buildx\n",
            "name": "chatbot",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.182.103",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/regions/us-central1/subnetworks/chatbot-subnet",
                "subnetwork_project": "poised-diagram-446213-g8"
              }
            ],
            "project": "poised-diagram-446213-g8",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/zones/us-central1-a/instances/chatbot",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gradio",
              "http-server",
              "https-server",
              "ssh-access"
            ],
            "tags_fingerprint": "1jaMA5QrWiI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/poised-diagram-446213-g8/global/networks/chatbot",
            "mtu": 0,
            "name": "chatbot",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7018604669379988612",
            "numeric_id": "7018604669379988612",
            "project": "poised-diagram-446213-g8",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-28T21:09:28.793-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/poised-diagram-446213-g8/regions/us-central1/subnetworks/chatbot-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "chatbot-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/global/networks/chatbot",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "poised-diagram-446213-g8",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poised-diagram-446213-g8/regions/us-central1/subnetworks/chatbot-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6431129091193883799
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}